# berlin-vegan-data

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  Dockerfile  Makefile  Pipfile  README.md  deploy.sh  docker-compose.dev.yml  docker-compose.yml  example.env  manage.py  nginx-proxy.conf  requirements.txt  tox.ini
.github/: dependabot.yml
.github/workflows/: build-push-images.yml  codeql-analysis.yml  main.yml
backend/: .isort.cfg  Dockerfile  Makefile  Pipfile  example.env  manage.py  pyproject.toml  run  tox.ini
backend/bvdata/: celery.py  urls.py  wsgi.py
backend/bvdata/data/: admin.py  filters.py  forms.py  mail.py  managers.py  models.py  review_sync.py  tasks.py  urls.py  views.py
backend/bvdata/data/api_legacy/: serializers.py  test_serializers.py
backend/bvdata/data/api_v1/: serializers.py  urls.py  viewsets.py
backend/bvdata/data/api_v2/: FilterBackend.py  serializers.py  urls.py  viewsets.py
backend/bvdata/data/api_v2/tests/: tests_serializers.py  tests_viewsets.py
backend/bvdata/data/locale/de/LC_MESSAGES/: django.po
backend/bvdata/data/management/commands/: import_reviews.py
backend/bvdata/data/migrations/: 0001_initial.py  0002_add_ordering.py  0003_gastro_commentopen.py  0006_refactor_verbose_name.py  0009_gastro_add_is_submission.py  0010_merge_gastro_gastro_submit.py  0011_remove_gastro_submit.py  0012_gastro_adjust_field_names.py  0013_adjust_fields.py  0013_review_link_submit_email_null_to_empty_string.py  0014_adjust_fields.py  0015_refactor_baselocation.py  0016_add_gastro_type_to_baselocation.py  0016_migrate_legacy_gastro_baselocation.py  0017_migrate_legacy_gastro_baselocation.py  0018_delete_legacy_gastro.py  0019_add_review_model.py  0020_alter_baselocation_comment_public_transport_and_more.py  0021_add_image_model.py
backend/bvdata/data/templates/data/: base.html  gastro-submit.html
backend/bvdata/data/tests/: factories.py  test_api_legacy_locations_json.py  test_apigastrolocationsjson.py  test_filters.py  test_models.py  tests_gastrosubmit.py  tests_review_sync.py  utils.py
backend/bvdata/data/tests/test_files/: raw_review_content.txt  review_text.txt
backend/bvdata/settings/: __init__.py  base.py
backend/bvdata/static/bootstrap/css/: signin.css
backend/bvdata/static/js/: gastro-submit.js  map.js
backend/bvdata/templates/spa/: admin.html
bvdata/: urls.py  wsgi.py
bvdata/data/: admin.py  apps.py  context_processors.py  filters.py  forms.py  mail.py  managers.py  models.py  serializer.py  urls.py  utils.py  views.py
bvdata/settings/: base.py  dev.py  example.docker.py
entrypoint/: nginx-proxy.conf
frontend/: .eslintignore  .eslintrc.json  .prettierignore  .prettierrc.json  Dockerfile  eslint.config.js  example.env  index.html  nginx.conf  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/admin/: .eslintrc  (+6 more)
(+286 files in other folders)
