[tool.poetry]
name = "bvdata"
version = "0.1.0"
description = "Database for Berlin-Vegan"
authors = ["Berlin-Vegan"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.4"
django-crispy-forms = "^1.14.0"
psycopg2-binary = "^2.9.3"
gunicorn = "^20.1.0"
django-filter = "^21.1"
django-rest-registration = "^0.7.0"
djangorestframework = "^3.13.1"
djangorestframework-camel-case = "^1.3.0"
regex = "^2022.1.18"
sentry-sdk = "^1.5.4"
celery = "^5.2.3"
redis = "^4.1.2"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
isort = "^5.10.1"
black = "^24.3.0"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
pytest-django = "^4.5.2"
pytest-sugar = "^0.9.4"
factory-boy = "^3.2.1"
ipython = "^8.0.1"
django-debug-toolbar = "^3.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
