[tool.poetry]
name = "bvdata"
version = "0.1.0"
description = "Database for Berlin-Vegan"
authors = ["Berlin-Vegan"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5"
django-crispy-forms = "^1.14.0"
gunicorn = "^23"
django-filter = "^24"
django-rest-registration = "^0.9.0"
djangorestframework = "^3.15"
djangorestframework-camel-case = "^1.4"
regex = "^2024.9.11"
sentry-sdk = "^2.14"
celery = "^5.4"
redis = "^5.0"
requests = "^2.32"
psycopg = {extras = ["binary"], version = "^3.2.3"}
pillow = "^11.0.0"
beautifulsoup4 = "^4.12.3"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
django-debug-toolbar = "^4.4.6"
factory-boy = "^3.3.1"
flake8 = "^7.1.1"
ipython = "^8.27.0"
isort = "^6.1.0"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
pytest-django = "^4.9.0"
pytest-sugar = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
